--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,7 @@ header > p {
     color: white;
     max-width: 500px;
     margin: auto;
-    margin-bottom: 20px;
-    padding: 0px 10px 0px 10px;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.253);
 }
 
